# qotbot

./: .dockerignore  .gitignore  Dockerfile  README.md  REFACTOR_PLAN.md  pyproject.toml  readme.md  sample.env
bot/: config.py  conversation_manager.py  main.py  telegram_bot.py
bot/database/models/: channel.py  chat_participant.py  llm_response.py  message.py  user.py
bot/db/: __init__.py  crud.py  database.py
bot/db/models/: __init__.py  chat.py  message.py  session.py  user.py
bot/handlers/: __init__.py  commands.py  message.py
bot/llm/: handler.py
bot/models/: chat_message.py  conversation.py
bot/session/: __init__.py  classifier.py  prompt.py
bot/tools/: memories.py  simple.py  telegram.py  wolfram_alpha.py
bot/util/: combined_mcp.py  media.py  prompts.py
skills/: tannerbot.md
spec/: PLAN.md
specs/llm-conversation-handling/: README.md  risks.md  tasks.md  test-plan.md
specs/owner-only-llm-tools/: README.md  risks.md  tasks.md  test-plan.md
src/qotbot/: __main__.py
src/qotbot/commands/: admin.py  commands.py  rules.py  summary.py  system.py
src/qotbot/database/: __init__.py  chats.py  database.py  messages.py  rules.py  users.py
src/qotbot/database/models/: __init__.py  chat.py  log.py  message.py  rule.py  summary.py  todo.py  user.py
src/qotbot/llm/: agent.py  chatter.py  classifier.py  client.py  image_describer.py  summariser.py
src/qotbot/tools/: classification_tools.py  date_tools.py  logs_tools.py  lolcryption.py  telegram.py  todo_tools.py  tts.py  web_search.py  web_tools.py  woolworths.py
src/qotbot/utils/: build_common_prompts.py  command.py  config.py  get_identities.py  media.py  sqlite_handler.py  whisper.py
src/qotbot/workers/: PriorityItem.py  __init__.py  audio_worker.py  build_common_prompts.py  classification_worker.py  get_identities.py  image_worker.py  response_worker.py
