[project]
name = "telegram-llm-bot-bot"
version = "0.1.0"
description = "Telegram bot with LLM integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptg>=0.5.1",
    "pillow>=11.3.0",
    "aiohttp>=3.12.15",
    "telethon>=1.40.0",
    "ollama>=0.5.3",
    "mcp>=1.13.1",
    "sqlalchemy>=2.0.43",
    "fastmcp>=3.0.0",
    "requests>=2.32.5",
    "openai>=2.26.0",
    "anthropic[aiohttp]>=0.84.0",
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.2",
    "pydantic>=2.12.5",
    "openai-whisper>=20250625",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
qotbot = "qotbot.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qotbot"]
