[project]
name = "qotbot"
version = "0.1.0"
description = "Telegram bot with LLM integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.22.1",
    "cryptg>=0.5.1",
    "fastmcp>=3.0.0",
    "openai>=2.26.0",
    "openai-whisper>=20250625",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "telethon>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
qotbot = "qotbot.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qotbot"]
