[project]
name = "qotbot"
version = "0.1.0"
description = "Telegram bot with LLM integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.22.1",
    "cryptg>=0.5.1",
    "fastmcp>=3.0.0",
    "ffmpeg-python>=0.2.0",
    "openai>=2.26.0",
    "sqlalchemy>=2.0.43",
    "telethon>=1.40.0",
    "ollama>=0.6.1",
    "faster-whisper>=1.2.1",
    "greenlet>=3.3.2",
    "kokoro-onnx>=0.1.0",
    "soundfile>=0.13.0",
    "numpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
qotbot = "qotbot.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qotbot"]
